# lpm

./: Cargo.toml  Cargo.tomlt  README.md  lpm-cl
lpm-cli/: Cargo.toml
lpm-cli/src/: main.rs
lpm-core/: Cargo.toml  process_manager.rs
lpm-core/src/: lib.rs
lpm-gui/: Cargo.toml  Cargo.toml]  processes.json
lpm-gui/src/: main.rs
lpm-gui/src/tabs/: alerts_tab.rs  graph_tab.rs  history_tab.rs  performance_tab.rs  process_tab.rs  process_tree_tab.rs
