[package]
name = "lpm-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.6.6", package = "gtk4" }
cairo-rs = "0.17.10"  # ✅ cairo from cairo-rs crate
plotters-cairo = "0.4.0" # ✅ This matches cairo 0.17.10
plotters = "0.3.7"
sysinfo = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lpm-core = { path = "../lpm-core" }
libc = "0.2"

